add visual polish to portifolia comp

--- a/src/app/customer/customer-portfolio/customer-portfolio.component.html
+++ b/src/app/customer/customer-portfolio/customer-portfolio.component.html
@@ -7,7 +7,7 @@
   </div>
 
 
-  <div>Privacy design</div>
+  <div style="font-weight:100;margin-top: 10px;margin-bottom: 10px;">Manage all Customer Infos Here</div>
 </div>
 <mat-card class=containerCard>
   Content
