--- a/src/app/customer/customer-portfolio/customer-portfolio.component.html
+++ b/src/app/customer/customer-portfolio/customer-portfolio.component.html
@@ -1,6 +1,6 @@
 
 <div fxLayout="column" fxLayoutAlign="space-between center">
-
+<div mat-subheader>Personal Details</div>
   <div fxLayout="column" fxLayoutAlign="space-between center" >
     <img src={{allDataService.customerData.customerImgFile}} style="border-radius: 50%;width: 80px;height: 80px;">
     <div style="font-size: medium;">{{allDataService.customerData.name}}</div>
@@ -9,6 +9,60 @@
 
   <div style="font-weight:100;margin-top: 10px;margin-bottom: 10px;">Manage all Customer Infos Here</div>
 </div>
+
+
+
+
+
 <mat-card class=containerCard>
-  Content
+  
+  <mat-divider></mat-divider>
+
+  <div class="Loan Details">
+    <div mat-subheader>Loan Details</div>
+    <mat-list>
+      <mat-list-item>
+        <mat-icon mat-list-icon>calendar_view_day</mat-icon>
+        <div mat-line>Disbursement Date</div>
+        <div mat-line>3/6/2020</div>
+      </mat-list-item>
+
+    <mat-list-item>
+        <mat-icon mat-list-icon>payment</mat-icon>
+        <div mat-line>Loan Amount</div>
+        <div mat-line>100,000 TZS</div>
+      </mat-list-item>
+
+      <mat-list-item>
+        <mat-icon mat-list-icon>stars</mat-icon>
+        <div mat-line>Interest Rate</div>
+        <div mat-line>20%</div>
+      </mat-list-item>
+
+      <mat-list-item>
+        <mat-icon mat-list-icon>calendar_today</mat-icon>
+        <div mat-line>Tenure</div>
+        <div mat-line>Monthly</div>
+        <mat-icon>refresh</mat-icon>
+      </mat-list-item>
+
+       <mat-list-item>
+        <mat-icon mat-list-icon>date_range</mat-icon>
+        <div mat-line>Weekly Instalment</div>
+        <div mat-line>Monthly</div>
+        <mat-icon>refresh</mat-icon>
+      </mat-list-item>
+      
+    </mat-list>
+
+
+  </div>
+ 
+
 </mat-card>
+
+<mat-card></mat-card>
+<mat-card class="repayments">
+
+</mat-card>
+
