--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -1,8 +1,10 @@
-<mat-tab-group>
+<mat-tab-group (selectedTabChange)="tabChanged($event)">
   <mat-tab label="All">
     <app-all-payment></app-all-payment>
   </mat-tab>
-  <mat-tab label="Succeeded"> This will Show all Succeeded Payment </mat-tab>
+  <mat-tab label="Succeeded">
+    <app-succesed-payment></app-succesed-payment>
+  </mat-tab>
   <mat-tab label="Refunded"> Will Show all Refunded Payments </mat-tab>
   <mat-tab label="UnCaptured"> Will Show all Uncaptured Payments </mat-tab>
 </mat-tab-group>
