add progress for visual laoding if we query on serve

--- a/src/app/customer/customer-portfolio/customer-portfolio.component.html
+++ b/src/app/customer/customer-portfolio/customer-portfolio.component.html
@@ -13,9 +13,9 @@
 
 
 
-
+<mat-progress-bar mode="indeterminate"></mat-progress-bar>
 <mat-card class=containerCard>
-  
+
   <mat-divider></mat-divider>
 
   <div class="Loan Details">
@@ -52,12 +52,12 @@
         <div mat-line>Monthly</div>
         <mat-icon>refresh</mat-icon>
       </mat-list-item>
-      
+
     </mat-list>
 
 
   </div>
- 
+
 
 </mat-card>
 
