add polish design  to payment component

--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -5,6 +5,7 @@
   <mat-tab label="Succeeded">
     <app-succesed-payment></app-succesed-payment>
   </mat-tab>
-  <mat-tab label="Refunded"> Will Show all Refunded Payments </mat-tab>
-  <mat-tab label="UnCaptured"> Will Show all Uncaptured Payments </mat-tab>
+  <mat-tab label="Summary">
+    <app-summary-payment></app-summary-payment>
+  </mat-tab>
 </mat-tab-group>
