changed the favIcon

--- a/src/app/customer/customer-portfolio/customer-portfolio.component.css
+++ b/src/app/customer/customer-portfolio/customer-portfolio.component.css
@@ -67,9 +67,23 @@
     text-align: center;
 }
 
-
 table {
   width: 100%;
-    margin-top: 20px;
+}
 
+.detailsContainer{
+    display: flex;
+    justify-content: space-around;
+}
+.details{
+    width: 50%;
+    margin: 20px 0 20px 0;
+}
+.personal{
+    border-style: solid;
+    border-width: 1px;
+    border-top: none;
+    border-bottom: none;
+    border-left: none;
+    border-color: rgb(192, 192, 192);
 }
