--- a/src/app/customer/customer-portfolio/customer-portfolio.component.html
+++ b/src/app/customer/customer-portfolio/customer-portfolio.component.html
@@ -27,7 +27,7 @@
         <mat-icon mat-list-icon>call</mat-icon>
         <div mat-line>Contacts</div>
         <div mat-line>+255 XXX XXX XXX</div>
-        <button mat-button>
+        <button mat-icon-button mat-button>
           <mat-icon>edit</mat-icon>
         </button>
       </mat-list-item>
@@ -36,10 +36,11 @@
         <mat-icon mat-list-icon>location_on</mat-icon>
         <div mat-line>Address</div>
         <div mat-line>Uyole</div>
-        <button mat-button>
+        <button mat-icon-button  mat-button>
           <mat-icon>edit</mat-icon>
         </button>
       </mat-list-item>
+      
 
     </mat-list>
 </div>
@@ -57,7 +58,7 @@
         <mat-icon mat-list-icon>stars</mat-icon>
         <div mat-line>Interest Rate</div>
         <div mat-line>20%</div>
-        <button mat-button>
+        <button mat-icon-button mat-button>
           <mat-icon>edit</mat-icon>
         </button>
         
@@ -67,7 +68,7 @@
         <mat-icon mat-list-icon>calendar_today</mat-icon>
         <div mat-line>Tenure</div>
         <div mat-line>8 Weeks</div>
-        <button mat-button>
+        <button mat-icon-button mat-button>
           <mat-icon>edit</mat-icon>
         </button>
       </mat-list-item>
@@ -76,7 +77,7 @@
         <mat-icon mat-list-icon>date_range</mat-icon>
         <div mat-line>Weekly Instalment</div>
         <div mat-line>30,000/- TZS</div>
-        <button mat-button>
+        <button mat-icon-button mat-button>
           <mat-icon>edit</mat-icon>
         </button>
       </mat-list-item>
