--- a/src/app/payment/all-payment/all-payment.component.css
+++ b/src/app/payment/all-payment/all-payment.component.css
@@ -2,3 +2,9 @@
 .mat-form-field + .mat-form-field {
   margin-left: 8px;
 }
+
+mat-expansion-panel{
+  width: 98%;
+  margin-left: 1%;
+  margin-top: 20px;
+}
