added the cards to the home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,7 @@
-<p>All Graphs</p>
+<section class="container spaced">
+    <div class="smallcard">
+        <div class="card_head">New leads this month</div>
+    </div>
+    <percent-circle percent="myPercentModel"></percent-circle>
+    
+</section>
