--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -11,6 +11,8 @@
     border-radius: 5px;
     height: 100px;
     width: 23%;
+    overflow: hidden;
+    color: grey;
 }
 .card_head{
     width: 100%;
@@ -22,7 +24,16 @@
     border-top: none;
     border-right: none;
     text-indent: 15px;
-    margin-top: 5px;
+    margin-top: 5px; 
+}
 
-    
+.card_contents{
+    width: 100%;
+    float: left;
+    display: flex;
+    justify-content: space-around;
+}
+[smallCard_per]{
+    margin-left: 15px;
+    margin-top:5px;
 }
