added a new tasks modules

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -45,3 +45,14 @@
     
     
 </section>
+<section class="container" style="display: flex; justify-content: space-between;">
+    <div class="task_opportunities">
+        <div class="card_head">My tasks</div>
+        <div class="task_contanier"></div>
+    </div>
+    <div class="task_opportunities">
+        <div class="card_head">My Calender</div>
+        <div class="task_contanier"></div>
+
+    </div>
+</section>
