adding my-tasks

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -48,7 +48,9 @@
 <section class="container" style="display: flex; justify-content: space-between;">
     <div class="task_opportunities">
         <div class="card_head">My tasks</div>
-        <div class="task_contanier"></div>
+        <div class="task_contanier">
+            <app-user-tasks></app-user-tasks>
+        </div>
     </div>
     <div class="task_opportunities">
         <div class="card_head">My Calender</div>
